<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/app_option_layout">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/app_option_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_move_to_bottom"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/app_to_bottom"
            android:textColor="#00BCD4"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_delete_app"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/app_delete"
            android:textColor="#FF0000"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_move_to_left"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/app_to_left"
            android:textColor="#00BCD4"
            android:textSize="18dp" />
    </LinearLayout>

</RelativeLayout>