<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <com.aiocw.aihome.easylauncher.desktop.widget.ScrollLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/linear_layout_app_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tv_widget_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/tv_data_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_time"
                        android:textAlignment="textStart"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_time"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="54sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:weightSum="8"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_message_show"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="6"
                        android:gravity="center"
                        android:text="充电中"
                        android:textColor="#FFFFFF"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_weather_t"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="12℃"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_weather_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="雨花区"
                            android:textColor="#FFFFFF" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_weather_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/sun" />
                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_app_widget"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/left_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                tools:context=".desktop.activity.HomeActivity">

            </androidx.recyclerview.widget.RecyclerView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/in_li"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_show_memory"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/right_item_bk_message" />

                    <Button
                        android:id="@+id/btn_wallpaper_change"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/right_item_bk_message"
                        android:text="@string/change_bk" />

                    <Button
                        android:id="@+id/btn_add_wait_to_do"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/right_item_bk_message"
                        android:text="@string/add" />
                    <Button
                        android:id="@+id/btn_main_setting"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/right_item_bk_message"
                        android:text="@string/setting" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/right_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/in_li" />
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/app_option_layout">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/app_option_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_move_to_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/app_to_bottom"
                    android:textColor="#00BCD4"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_delete_app"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/app_delete"
                    android:textColor="#FF0000"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tv_move_to_left"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/app_to_left"
                    android:textColor="#00BCD4"
                    android:textSize="18dp" />
            </LinearLayout>

        </RelativeLayout>


    </com.aiocw.aihome.easylauncher.desktop.widget.ScrollLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bottom_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bottom_recycler_view_bk"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:scrollbars="horizontal" />

    </LinearLayout>

</LinearLayout>